# gnm_sim

./: .gitignore  README.md
src/jackal_description/: CMakeLists.txt  package.xml
src/sim_world/: CMakeLists.txt  package.xml
src/sim_world/config/: config.yaml
src/sim_world/launch/: manual.launch  world0.launch  world1.launch
src/sim_world/launch/include/: control.launch  spawn_jackal0.launch  spawn_jackal1.launch
src/sim_world/world/: sim0.world  sim1.world
src/visualnav-transformer/deployment/config/: robot.yaml
src/visualnav-transformer/deployment/move_obs/: move_obstacle.py
src/visualnav-transformer/deployment/src/: obstacle_avoid.py  pd_controller.py  vint_jackal.launch
