<?xml version="1.0"?>
<package format="2">
  <name>sim_world</name>
  <version>0.0.0</version>
  <description>The sim_world package</description>

  <maintainer email="lsh@todo.todo">lsh</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>  
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rviz</depend>
  <depend>gazebo_ros</depend>
  <depend>map_server</depend>
  <depend>jsk_rviz_plugins</depend>
  <depend>jackal_gazebo</depend>
  <depend>jackal_navigation</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>velodyne_simulator</depend>

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  
  </export>
</package>
